# riscv-bbl-utils

./: .gitignore  Makefile.in  README.md  configure.ac  kerbbl  mkbbl  riscv-bbl-utils.spec
src/: patch_bbl.c
